<resources>
    <integer name="com_vk_sdk_AppId">7327412</integer>
    <string name="app_name">githubApp</string>

    <string name="image_description_avatar">avatar</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="users_empty_placeholder">Start input username for search</string>
    <string name="loading">Loading…</string>
    <string name="list_loading_error_message">Error page loading, check your internet connection</string>
    <string name="search_empty_results">No results were found for your query</string>
    <string name="hamburger_description">openDrawer</string>
</resources>
