<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/user_iv_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/image_description_avatar"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/user_tv_username"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/user_tv_login"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:text="@tools:sample/last_names" />


</LinearLayout>