...
                    android:id="@+id/recycler_placeholder_iv"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_search_black_24dp" />

                <TextView
                    android:id="@+id/recycler_placeholder_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    tools:text="@tools:sample/lorem/random" />
...
                    android:layout_marginEnd="16dp"
                    android:text="@string/loading" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frag_users_recycler"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

...
